change password function is implemented
