# utils/swagger.json
@@ -317,6 +317,7 @@
         "tags": [
           "Carts"
         ],
+        "description":"add Product to cart ",
         "security": [
           {
             "bearerAuth": []
@@ -551,18 +552,30 @@
     "CartInput": {
       "type": "object",
       "properties": {
-        "productId": {
-          "type": "string"
-        },
-        "quantity": {
-          "type": "number"
+        "products": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "productId": {
+                "type": "string"
+              },
+              "quantity": {
+                "type": "number"
+              }
+            },
+            "required": [
+              "productId",
+              "quantity"
+            ]
+          }
         }
       },
       "required": [
-        "productId",
-        "quantity"
+        "items"
       ]
-    },
+    }
+,    
     "OrderInput": {
       "type": "object",
       "properties": {
